# sl

./: .gitignore  LICENSE  bug_report_and_recommendations.md  build_suckless.sh  readme.md
dmenu/: dmenu_run
dmenu/j4-dmenu-desktop/: BUILDING.md  CHANGELOG  CMakeLists.txt  CONTRIBUTING.md  HOW-TO-RELEASE  README.md  j4-dmenu-desktop.1  meson-setup.sh  meson.options  version.txt
dmenu/j4-dmenu-desktop/etc/: README.md  j4-dmenu-desktop.yaml  meson.build
dmenu/j4-dmenu-desktop/etc/completions/: _j4-dmenu-desktop  j4-dmenu-desktop  j4-dmenu-desktop.fish
dmenu/j4-dmenu-desktop/meson-native/: debug.ini  sanitize.ini
dmenu/j4-dmenu-desktop/src/: Application.cc  NotifyKqueue.cc  ParsingQuirks.hh  main.cc  meson.build
dmenu/j4-dmenu-desktop/subprojects/: fmt.wrap  spdlog.wrap
dmenu/j4-dmenu-desktop/subprojects/packagefiles/: dont_install_fmt.patch  dont_install_spdlog.patch
dmenu/j4-dmenu-desktop/tests/: TestAppManager.cc  TestCMDLineAssembler.cc  TestFileFinder.cc  TestNotify.cc  meson.build
dmenu/j4-dmenu-desktop/tests/system_tests/: system_test.py
dmenu/j4-dmenu-desktop/tests/test_files/applications/: all-quirks.desktop  alpine-toolbox-latest-feh.desktop
dmenu/j4-dmenu-desktop/tests/test_files/pytest/quirks/: selected.desktop
dwm/: config.def.h  config.h  dwm  dwm.c  dwm.c.orig
misc/: xinitrc-config.txt
misc0/: dwm.desktop  xinitrc-config.txt
slstatus/: config.h  slstatus
st/: config.h  st
